--- a/WebApp/controller.css
+++ b/WebApp/controller.css
@@ -4,14 +4,20 @@
     float: left;
     background-color: #333;
     position: absolute;
-
+    padding-left: 2em;
 			  
 }
 .infopane {
-    height: 100%;
-    width: 66%;
+    height: 65%;
+    width: 55%;
+    padding-top: 1em;
+    padding-left: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     position: absolute;
-    left: 33%;
+    background-color: #333;
+    left: 37%;
+    float: left;
 }
 
 body {
@@ -19,4 +25,23 @@ body {
     color: white;
     padding: 0px;
     margin: 0px;
+    height: 100px;
+    margin-bottom: %200;
+}
+
+#history {
+    margin-top: 2em;
+    margin-bottom: 1em;
+    overflow: auto;
+    height: 80%;
+
+}
+
+#connection {
+    color: #B22222;
+}
+
+.command {
+    
+	
 }
